--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 虎小希的个人博客
 SEOTitle: Xiaoxi's Blog
-header-img: img/虎小希.jpg
+header-img: img/TigerXiaoxi.jpg
 email: 1956242193@qq.com
 description: "Windows各种教程"
 keyword: "Windows, ISO, VMware, macOS"
