--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "by-blog",
     "title": "BY Blog",
-    "author": "BY <1956242193@qq.com>",
+    "author": "BY <qiubaiyingios@163.com>",
     "version": "1.7.0",
-    "homepage": "http://tigerxiaoxi.github.io",
+    "homepage": "http://qiubaiying.github.io",
     "repository": {
         "type": "git",
-        "url": "https://github.com/tigerxiaoxi/tigerxiaoxi.github.io"
+        "url": "https://github.com/qiubaiying/qiubaiying.github.io"
     },
-    "bugs": "https://github.com/tigerxiaoxi/tigerxiaoxi.github.io/issues",
+    "bugs": "https://github.com/qiubaiying/qiubaiying.github.io/issues",
     "devDependencies": {
         "grunt": ">=1.3.0",
         "grunt-contrib-less": "~0.11.4",
