--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Xiaoxi's Blog
+title: 虎小希的个人博客
 SEOTitle: Xiaoxi's Blog
 header-img: img/home-bg-o.jpg
 email: 1956242193@qq.com
