--- a/_config.yml
+++ b/_config.yml
@@ -60,8 +60,8 @@ gitalk:
   clientID: d18b343dd9c7ca49518a                            #生成的clientID
   clientSecret: 539e88b8a7feffaddbb553b9c421dfefcbc6eced    #生成的clientSecret
   repo: klovien.github.io    #仓库名称
-  owner: klovien    #github用户名
-  admin: klovien
+  owner: tigerxiaoxi    #github用户名
+  admin: tigerxiaoxi
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
@@ -81,7 +81,7 @@ gitalk:
 
 # Featured Tags
 featured-tags: true                     # 是否使用首页标签
-featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
+featured-condition-size: 0              # 相同标签数量大于这个数，才会出现在首页
 
 
 
