--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: TigerXiaoxi 的个人博客
-SEOTitle: TigerXiaoxi's Blog
+title: TigerXiaoxi 的博客
+SEOTitle: TigerXiaoxi 的博客
 header-img: img/genshin-impact.png
 email: 1956242193@qq.com
 description: ""
