--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: TigerXiaoxi 的博客
 SEOTitle: TigerXiaoxi 的博客
-header-img: img/genshin-impact.png
+header-img: img/StarTrails.jpg
 email: 1956242193@qq.com
 description: ""
 keyword: "Windows, ISO, VMware, macOS"
