--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: TigerXiaoxi 的博客
-SEOTitle: TigerXiaoxi 的博客
+title: Venti__0616 的博客
+SEOTitle: Venti__0616 的博客
 header-img: img/StarTrails.jpg
 email: 1956242193@qq.com
 description: ""
